--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -41,6 +41,14 @@
                       </li>
                     </ul>
                   </div>
+                  <div class="form-group">
+                    <ul class="list-group" id="filters">
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a City</label>
+                        <input class="form-control" id="city" type="text" placeholder="el cajon">
+                      </li>
+                    </ul>
+                  </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
               </div>
